# mediatek_flash_tool

./: CMakeLists.txt  README.md  main.c
flash_tool/: main.c  util.c
inc/: mtk_device.h
src/: mtk_da.c  mtk_device.c  mtk_preloader.c
